Finished with some styling

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+body {
+  font-size: 62.5%;
+  font-family: 'Itim', cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 3.5rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h4 {
+  font-size: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+p {
+  font-size: 1.25rem;
+}
+
+span {
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+
+ul { 
+  margin-right: 5%;
+}
+
+li {
+  font-size: 1.25rem;
+  list-style: none;
+  padding-top: 1.2%;
+}
+
+img {
+  width: 500px;
+  border-radius: 5px;
+}
+
+button {
+  font-size: 1rem;
+  padding: 1%;
+  font-family: 'Itim';
+}
+
+.app-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.app-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.drink-card {
+  width: 100%;
+}
+
+.drink-top {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.drink-info {
+  margin-left: 2%;
+}
+
+.drink-instructions {
+  text-align: center;
+
+}
+
+.ing {
+  display: inline-block;
+  position: relative;
+  right: 35px;
+  width: 100%;
 }
