working on styling and media breakpoints

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,6 +1,6 @@
 body {
   font-size: 62.5%;
-  font-family: 'Itim', cursive;
+  font-family: 'Lato', sans-serif;
 }
 
 h1 {
@@ -17,7 +17,12 @@ p {
   font-size: 1.25rem;
 }
 
-span {
+.b-font {
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+
+.underline {
   font-weight: bold;
   font-size: 1.5rem;
   text-decoration: underline;
@@ -88,6 +93,35 @@ button {
   width: 100%;
 }
 
-@media (max-width: 768px) {
-  
+@media (max-width: 480px) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  img {
+    width: 100%;
+    border-radius: 5px;
+  }
+
+  .drink-top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .drink-pic {
+    width: 90%;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+
+  .b-font {
+    font-weight: bold;
+    font-size: 1.1rem;
+  }
+
 }
