--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,6 +1,8 @@
 body {
   font-size: 62.5%;
   font-family: 'Lato', sans-serif;
+  background-color: #041C32;
+  color: white;
 }
 
 h1 {
@@ -40,13 +42,25 @@ li {
 
 img {
   width: 500px;
+  border: .25px solid white;
   border-radius: 5px;
 }
 
-button {
+.btn {
   font-size: 1rem;
-  padding: 1%;
-  font-family: 'Itim';
+  padding: 2% 4%;
+  background-color: #041C32;
+  border: .5px solid white;
+  color: white;
+  border-radius: 8px;
+}
+
+.btn:hover {
+  background-color: #406882;
+}
+
+.btn:active {
+  transform: translateY(4px);
 }
 
 .app-container {
@@ -93,14 +107,33 @@ button {
   width: 100%;
 }
 
+/* MEDIA QUERIES */
+
 @media (max-width: 480px) {
   h1 {
     font-size: 2rem;
   }
 
+  h4 {
+    font-size: 1.5rem;
+    padding-top: 1%;
+  }
+
   img {
     width: 100%;
     border-radius: 5px;
+    border: .1px solid white;
+  }
+
+  ul { 
+    margin-right: 5%;
+
+  }
+  
+  li {
+    font-size: 1rem;
+    list-style: none;
+    padding-top: 1.2%;
   }
 
   .drink-top {
@@ -116,12 +149,12 @@ button {
   }
 
   p {
-    font-size: 1rem;
+    font-size: .8rem;
   }
 
   .b-font {
     font-weight: bold;
-    font-size: 1.1rem;
+    font-size: .95rem;
   }
 
 }
