made footer for image credit, increased line-height on instructions

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -69,7 +69,6 @@ img {
   align-items: center;
   justify-content: center;
   width: 100%;
-
 }
 
 .app-header {
@@ -98,6 +97,7 @@ img {
 .drink-instructions {
   width: 50%;
   margin: auto;
+  line-height: 1.5;
 }
 
 .ing {
@@ -105,6 +105,13 @@ img {
   position: relative;
   right: 35px;
   width: 100%;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
 
 /* MEDIA QUERIES */
